[build-system]
requires = ["wheel", "setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-tester"
license = { text = "Apache 2.0"}
description = "Software for testing performance"
authors = [{name="junnaka51 team"}]
requires-python = ">=3.7"
dynamic = ["version"]
readme = "README.md"

[project.urls]
homepage ="https://github.com/junnaka51/performance_tester"
repository = "https://github.com/junnaka51/performance_tester"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = ["performance_tester"]

[tool.setuptools.dynamic]
version = {attr = "performance_tester._version.__version__"}

[tool.setuptools_scm]
write_to = "performance_tester/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
